<?xml version="1.0" encoding="utf-8"?><!--
        ~ Copyright 2022 The TensorFlow Authors. All Rights Reserved.
        ~
        ~ Licensed under the Apache License, Version 2.0 (the "License");
        ~ you may not use this file except in compliance with the License.
        ~ You may obtain a copy of the License at
        ~
        ~       http://www.apache.org/licenses/LICENSE-2.0
        ~
        ~ Unless required by applicable law or agreed to in writing, software
        ~ distributed under the License is distributed on an "AS IS" BASIS,
        ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        ~ See the License for the specific language governing permissions and
        ~ limitations under the License.
        ~ NOTE:
        ~ The project is based on https://github.com/tensorflow/examples/tree/master/lite/examples/image_classification/android
        ~ on above license. Every change has been made or approved by me (https://github.com/jankejc).
    -->
<resources>
    <string name="app_name">Czytnik Polskich Banknotów</string>

    <string name="alt_bottom_sheet_chevron">Bottom sheet expandable indicator</string>

    <string name="alt_bottom_sheet_max_results_button_minus">Decreasing maximum classified results
        button</string>
    <string name="alt_bottom_sheet_max_results_button_plus">Increasing maximum classified results
        button</string>
    <string name="alt_bottom_sheet_threshold_button_minus">Decreasing threshold of classified image
        results button</string>
    <string name="alt_bottom_sheet_threshold_button_plus">Increasing threshold of classified image
        results button</string>
    <string name="alt_bottom_sheet_thread_button_minus">Decrease the number of threads used</string>
    <string name="alt_bottom_sheet_thread_button_plus">Increase the number of threads used</string>

    <string name="label_inference_time">Inference Time</string>
    <string name="label_fps">Frames per Second</string>
    <string name="label_confidence_threshold">Threshold</string>
    <string name="label_max_results">Max Results</string>
    <string name="label_threads">Number of Threads</string>
    <string name="label_delegate">Delegate</string>
    <string name="label_models">ML Model</string>

    <!-- PL -->
    <string name="activity_main_menu_title">SettingsActivity</string>
    <string name="settings_activity_menu_title">Ustawienia</string>

    <string-array name="delegate_spinner_titles">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>

    <string-array name="models_spinner_titles">
        <item>MobileNet V1</item>
        <!--        <item>Latest Model</item>-->
        <!--        <item>Flower Model</item>-->
    </string-array>

    <!-- TALKBACK CONTENT DESCRIPTIONS PL -->
    <string name="settings_icon_desc">Ikona ustawień</string>
    <string name="back_from_settings_icon_desc">Ikona powrotu do rozpoznawania</string>
    <string name="blank_desc"></string>


    <!-- TODO: translate app to english (maybe) -->
    <!-- Preference Headers PL -->
    <string name="sensors_header">Sensory</string>
    <string name="label_header">Informacje ekranowe</string>
    <string name="accessibility_header">Dostępność</string>

    <!-- Messages Preferences PL -->
    <!-- TalkBackSpeaker -->
    <string name="talkback_speaker_on_off_title">Wypowiadanie etykiety</string>
    <string name="speaker_on_summary">Włączone</string>
    <string name="speaker_off_summary">Wyłączone </string>

    <string name="speaker_beep_title">Sygnały dźwiękowe</string>
    <string name="speaker_beep_on_summary">Sygnały dźwiękowe przy 200 i 500</string>
    <string name="speaker_beep_off_summary">Wypowiadanie nominałów 200 i 500</string>

    <!-- Torch -->
    <string name="manage_torch_title">Lampa błyskowa</string>
    <string name="manage_torch_on">Włączona</string>
    <string name="manage_torch_off">Wyłączona</string>

    <!-- Torch -->
    <string name="manage_haptizer_title">Wibracje</string>
    <string name="haptizer_summary_on">Włączone</string>
    <string name="haptizer_summary_off">Wyłączone</string>

    <!-- Label -->
    <string name="label_key">label_on_off</string>
    <string name="label_title">Etykieta</string>
    <string name="label_summary_on">Włączona</string>
    <string name="label_summary_off">Wyłączona </string>
    <string name="label_size_title">Wielkość etykiety</string>
    <string name="label_outline_color_title">Kolor obramowania etykiety</string>
    <string name="label_outline_size_title">Szerokość obramowania etykiety</string>
    <string name="label_stroke_color_title">Wewnętrzny kolor etykiety</string>
    <string name="label_show_time_title">Długość wyświetlania etykiety</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
