<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/sensors_header"
        app:icon="@drawable/ic_baseline_sensors_24">

        <ListPreference
            app:key="manage_torch"
            app:title="@string/manage_torch_title"
            app:entries="@array/manage_torch_entries"
            app:defaultValue="on"
            app:entryValues="@array/manage_torch_values"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>
</PreferenceScreen>